tests/fail/Interface.java
package fail;

import java.lang.System;

public class Interface {

  public static void main(String[] args ) {
    interface = "yes";
  }

}
